// Code generated by furo-proto-gen. DO NOT EDIT.
syntax = "proto3";
package furo.type;

import "furo/type/enum_furo_identifier.proto";
import "furo/type/enum_ref_type.proto";
import "furo/type/decimal.proto";
import "furo/type/decimal_range.proto";
import "furo/fat/fat.proto";
import "google/protobuf/any.proto";

import "openapiv3/annotations.proto";

option go_package = "furo/type;typepb";
option java_multiple_files = true;
option java_outer_classname = "Furo_identifierProto";
option java_package = "pro.furo.open-models.furo.type";

message Defaults {
  option (openapi.v3.schema) = {required:['string_array', 'id','repeated_decimal']};

  // related to the master of the object - who gives the id
  furo.type.RefSystem ref_system = 1;

  // Type from the master objects system
  furo.type.RefType ref_type = 2;

  // booking center
  furo.type.BookingCenter booking_center = 3 [(openapi.v3.property) = {default:{string:"BBC_CH"}}];

  // Attributes for a value, something like confidential-msg: you are not allowed to see this value
  map<string, string> attributes = 4 [(openapi.v3.property) = {default:{string:'{ "we": "have" }'}}];

  string id = 5 [(openapi.v3.property) ={default:{string:"default"},min_length:3, max_length:10, pattern:"^-*$"}];

  repeated string string_array = 6 [(openapi.v3.property) = {default:{string:'["A","B","C"]'},read_only:true, max_items:4}];

  repeated furo.type.Decimal repeated_decimal = 7 [(openapi.v3.property) = {minimum:3.1}];

  optional furo.type.DecimalRange dec_range = 8 [(openapi.v3.property) = {default:{string:'{"start":{"value":"123"}}'},read_only:true}];;

  google.protobuf.Any any = 9;

  furo.fat.String fat_string =10;

  bool true_false = 11;
}
