// Code generated by furo-proto-gen. DO NOT EDIT.
syntax = "proto3";
package furo.type;
option go_package = "furo/type;typepb";
option java_multiple_files = true;
option java_outer_classname = "ENUM_furo_identifierProto";
option java_package = "pro.furo.open-models.furo.type";


enum BookingCenter {
  BOOKING_CENTER_UNSPECIFIED = 0;
  GLOBAL = 101;
  REGION_EU = 102;
  REGION_AS = 103;
  BBC_LI = 3;
  BBC_AT = 7;
  BBC_CH = 4;
  BBC_HK = 6;
  BBC_SG = 5;
}

enum RefSystem {
  REF_SYSTEM_UNSPECIFIED = 0;
  ACP = 1;
  ICM = 2;
  DATAFACTORY = 3;
  HEIMDALL = 4;
  CRM = 5;
  CLM = 6;
  LOKI = 7;
  DIGIMON = 8;
  AD = 9;
  MATRIX = 10;
}
